--- a/index.html
+++ b/index.html
@@ -68,22 +68,22 @@
             <div class="content">
                 <div class="box__container">
                     <div class="chal__box">
-                        <img src="./Assets/money_icon.png" alt="money icon">
+                        <img src="./Assets/Asset 8.svg" alt="money icon">
                         <p>Vergabe von Darlehen in
                             Höhe von 1,5 Mio. EUR schon
                             im ersten Betriebsjahr</p>
                     </div>
                     <div class="chal__box">
-                        <img src="./Assets/hands_icon.png" alt="hands icon">
+                        <img src="./Assets/Asset 7.svg" alt="hands icon">
                         <p>Projektabnahmequote 5 %</p>
                     </div>
                     <div class="chal__box">
-                        <img src="./Assets/plant_icon.png" alt="plant icon">
+                        <img src="./Assets/Asset 9.svg" alt="plant icon">
                         <p>Bekannte Marke in Lettland 
                             für Landwirte LANDE.lv</p>
                     </div>
                     <div class="chal__box">
-                        <img src="./Assets/champion_icon.png" alt="champion icon">
+                        <img src="./Assets/Asset 10.svg" alt="champion icon">
                         <p>Gewinner des Fintech
                             Abu Dhabi Baltic States
                             des Jahres 2021</p>
